# mcp-hs-code-query

./: .gitignore  API_README.md  CHANGELOG.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  MANIFEST.in  NGROK_SETUP.md  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  PUBLISH_V1.1.0.md  QUICK_PUBLISH.md  QUICK_START.md  README.md  README_MCP.md  RELEASE_TEMPLATE.md  api_server.py  debug_html.py  main.py  publish.bat  publish.py  publish_now.bat  pyproject.toml  quick_test.py  requirements.txt  requirements_api.txt  setup_github.bat  start_api_with_ngrok.py  start_ngrok.bat  test_api.py  test_embedding_cache.py  test_example.py  test_fix_001.py  test_fix_002.py  test_hsciq.py  test_mcp_cli.py  test_mcp_server.py  test_parser_fix.py  test_similarity_comparison.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml
config/: __init__.py  settings.py
data/input/: products.txt
data/output/: batch_results_20251124_135620.json  batch_results_20251124_140946.json  batch_results_20251124_142642.json  batch_results_20251124_155345.json  batch_results_20251124_172013.json  hs_84193990_20.json  result_20251124_115105.json  test_fix_001.json  test_fix_002
docs/: CHANGELOG.md  CHANGELOG_001_修复数据解析和URL问题.md  CHANGELOG_001_补充修复.md  CHANGELOG_002_改进相似度匹配算法.md  CHANGELOG_003_迁移到FastAPI.md  CHANGELOG_004_添加HSCIQ网站支持.md  CHANGELOG_005_嵌入向量相似度改进.md  CHANGELOG_006_嵌入向量缓存优化.md  README.md  SUMMARY_001.md  TEMPLATE.md
mcp_hs_code_query/: __init__.py  __main__.py  server.py
src/: __init__.py  embedding_matcher.py  parser.py  parser_hsciq.py  scraper.py  scraper_hsciq.py  search_optimizer.py  storage.py  utils.py
